[#142] You can now detect how far the mouse wheel has scrolled

--- a/SuperGameEngine/Input/Input.vcxproj
+++ b/SuperGameEngine/Input/Input.vcxproj
@@ -183,6 +183,8 @@
     <ClInclude Include="InputManagement\Event\MouseButton.h" />
     <ClInclude Include="InputManagement\Event\MouseButtonEvent.h" />
     <ClInclude Include="InputManagement\Event\MouseMotionEvent.h" />
+    <ClInclude Include="InputManagement\Event\MouseWheelDirection.h" />
+    <ClInclude Include="InputManagement\Event\MouseWheelEvent.h" />
     <ClInclude Include="InputManagement\Event\WindowEvent.h" />
     <ClInclude Include="InputManagement\Event\WindowEventType.h" />
     <ClInclude Include="InputManagement\Event\WindowUpdateEvent.h" />
@@ -223,6 +225,9 @@
     </ProjectReference>
     <ProjectReference Include="..\..\FatedQuest.Libraries\StandardObjects\StandardObjects.vcxproj">
       <Project>{3f3ccd80-0310-46b9-a963-285eac938cd6}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\FatedQuest.Libraries\StandardOperations\StandardOperations.vcxproj">
+      <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\FatedQuest.Libraries\XmlDocument\XmlDocument.vcxproj">
       <Project>{04db48a3-bce2-4311-8fc4-ed2b39b5e3b8}</Project>
