[#132] You can now delete components on GameObjects.

--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -297,6 +297,7 @@
     <ClInclude Include="Windows\LoggerOutput\LogEntry.h" />
     <ClInclude Include="Windows\LoggerOutput\LoggerOutput.h" />
     <ClInclude Include="Windows\MainMenuBar\MainMenuBar.h" />
+    <ClInclude Include="Windows\SceneHierarchy\EventArguments\OnMenuDeleteComponentEventArguments.h" />
     <ClInclude Include="Windows\SceneHierarchy\EventArguments\OnMenuDeleteGameObjectEventArguments.h" />
     <ClInclude Include="Windows\SceneHierarchy\EventArguments\OnMenuNewGameObjectEventArguments.h" />
     <ClInclude Include="Windows\SceneHierarchy\GameObjectTreeViewItem.h" />
