Converted SuperGenerator to CMake

--- a/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/CMakeLists.txt
+++ b/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(SuperGenerator)
+project(SuperEnumGenerator)
 include(../../../../FatedQuest.Libraries/CMake/Main.cmake)
 
 # Set C++ standard
@@ -34,31 +34,31 @@ foreach(FILE ${HEADER_FILES})
 endforeach()
 
 # Create the library
-if(NOT TARGET SuperGenerator)
-    add_library(SuperGenerator STATIC ${SOURCE_FILES} ${HEADER_FILES} ${PCH_FILES})
+if(NOT TARGET SuperEnumGenerator)
+    add_library(SuperEnumGenerator STATIC ${SOURCE_FILES} ${HEADER_FILES} ${PCH_FILES})
 endif()
 
 # Include directories
-target_include_directories(SuperGenerator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(SuperEnumGenerator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Enable precompiled headers
 set(PCH_HEADER "pch.h")
 
 if(MSVC)
-    target_precompile_headers(SuperGenerator PRIVATE ${PCH_HEADER})
+    target_precompile_headers(SuperEnumGenerator PRIVATE ${PCH_HEADER})
 endif()
 
 # Platform-specific settings
 if(WIN32)
-    target_compile_definitions(SuperGenerator PRIVATE _WINDOWS)
-    target_compile_options(SuperGenerator PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
+    target_compile_definitions(SuperEnumGenerator PRIVATE _WINDOWS)
+    target_compile_options(SuperEnumGenerator PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
 endif()
 
 # Set configurations
 foreach(OUTPUTCONFIG Debug Release Tools_Debug)
     string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
-    set_target_properties(SuperGenerator PROPERTIES 
-        OUTPUT_NAME_${OUTPUTCONFIG_UPPER} "SuperGenerator_${OUTPUTCONFIG}"
+    set_target_properties(SuperEnumGenerator PROPERTIES 
+        OUTPUT_NAME_${OUTPUTCONFIG_UPPER} "SuperEnumGenerator${OUTPUTCONFIG}"
     )
 endforeach()
 
@@ -71,7 +71,7 @@ add_subdirectory(../../../../FatedQuest.Libraries/StoredDocument StoredDocument)
 add_subdirectory(../../../../FatedQuest.Libraries/XmlDocument XmlDocument)
 
 # Link dependencies
-target_link_libraries(SuperGenerator
+target_link_libraries(SuperEnumGenerator
     Logger
     Observer
     StandardObjects
@@ -81,4 +81,4 @@ target_link_libraries(SuperGenerator
 )
 
 # Get Packages
-NugetInclude("rapidxml" SuperGenerator)
+NugetInclude("rapidxml" SuperEnumGenerator)
