Started to implement cmake for main engine

--- a/SuperGameEngine/Tools/CMakeLists.txt
+++ b/SuperGameEngine/Tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-project(SuperEnumGenerator)
-include(../../../../FatedQuest.Libraries/CMake/Main.cmake)
+project(Tools)
+include(../../FatedQuest.Libraries/CMake/Main.cmake)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -34,51 +34,44 @@ foreach(FILE ${HEADER_FILES})
 endforeach()
 
 # Create the library
-if(NOT TARGET SuperEnumGenerator)
-    add_library(SuperEnumGenerator STATIC ${SOURCE_FILES} ${HEADER_FILES} ${PCH_FILES})
+if(NOT TARGET Tools)
+    add_library(Tools STATIC ${SOURCE_FILES} ${HEADER_FILES} ${PCH_FILES})
 endif()
 
 # Include directories
-target_include_directories(SuperEnumGenerator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(Tools PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Enable precompiled headers
 set(PCH_HEADER "pch.h")
 
 if(MSVC)
-    target_precompile_headers(SuperEnumGenerator PRIVATE ${PCH_HEADER})
+    target_precompile_headers(Tools PRIVATE ${PCH_HEADER})
 endif()
 
 # Platform-specific settings
 if(WIN32)
-    target_compile_definitions(SuperEnumGenerator PRIVATE _WINDOWS)
-    target_compile_options(SuperEnumGenerator PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
+    target_compile_definitions(Tools PRIVATE _WINDOWS)
+    target_compile_options(Tools PRIVATE /W3 /permissive- /Zc:preprocessor /MP)
 endif()
 
 # Set configurations
 foreach(OUTPUTCONFIG Debug Release Tools_Debug)
     string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
-    set_target_properties(SuperEnumGenerator PROPERTIES 
-        OUTPUT_NAME_${OUTPUTCONFIG_UPPER} "SuperEnumGenerator${OUTPUTCONFIG}"
+    set_target_properties(Tools PROPERTIES 
+        OUTPUT_NAME_${OUTPUTCONFIG_UPPER} "Tools_${OUTPUTCONFIG}"
     )
 endforeach()
 
-# Get Packages
-NugetInclude("rapidxml" SuperEnumGenerator)
+# Get packages
+NugetInclude("rapidxml" Tools)
+NugetInclude("sdl2" Tools)
+NugetInclude("sdl2Mixer" Tools)
+NugetInclude("sdl2Image" Tools)
 
 # Link libraries
-add_subdirectory(../../../../FatedQuest.Libraries/Logger Logger)
-add_subdirectory(../../../../FatedQuest.Libraries/Observer Observer)
-add_subdirectory(../../../../FatedQuest.Libraries/StandardObjects StandardObjects)
-add_subdirectory(../../../../FatedQuest.Libraries/StandardOperations StandardOperations)
-add_subdirectory(../../../../FatedQuest.Libraries/StoredDocument StoredDocument)
-add_subdirectory(../../../../FatedQuest.Libraries/XmlDocument XmlDocument)
+add_subdirectory(../Engine Engine)
 
 # Link dependencies
-target_link_libraries(SuperEnumGenerator
-    Logger
-    Observer
-    StandardObjects
-    StandardOperations
-    StoredDocument
-    XmlDocument
+target_link_libraries(Tools
+    Engine
 )
