--- a/SuperGameEngine/CMakeLists.txt
+++ b/SuperGameEngine/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(FatedQuestSolution)
+project(SuperGameEngine)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -11,22 +11,15 @@ set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug")
 # Add subdirectories
 add_subdirectory(SuperGameEngine)
 add_subdirectory(Engine)
-add_subdirectory(EngineTests)
 add_subdirectory(Tools)
-add_subdirectory(ToolsTests)
 add_subdirectory(Input)
-add_subdirectory(InputTests)
 
 # Libraries under FatedQuest.Libraries
 add_subdirectory(../FatedQuest.Libraries/StandardObjects StandardObjects)
 add_subdirectory(../FatedQuest.Libraries/StandardOperations StandardOperations)
-add_subdirectory(../FatedQuest.Libraries/StandardOperationsTests StandardOperationsTests)
-add_subdirectory(../FatedQuest.Libraries/StandardObjectsTests StandardObjectsTests)
 add_subdirectory(../FatedQuest.Libraries/GamePackage GamePackage)
-add_subdirectory(../FatedQuest.Libraries/GamePackageTests GamePackageTests)
 add_subdirectory(../FatedQuest.Libraries/BinaryOperations BinaryOperations)
 add_subdirectory(../FatedQuest.Libraries/XmlDocument XmlDocument)
-add_subdirectory(../FatedQuest.Libraries/XmlDocumentTests XmlDocumentTests)
 add_subdirectory(../FatedQuest.Libraries/Logger Logger)
 add_subdirectory(../FatedQuest.Libraries/Observer Observer)
 add_subdirectory(../FatedQuest.Libraries/ClassTypes ClassTypes)
@@ -37,15 +30,32 @@ add_subdirectory(../FatedQuest.Libraries/SharedEnums SharedEnums)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_target_properties(StandardObjects PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(StandardOperations PROPERTIES FOLDER "FatedQuest.Libraries")
-set_target_properties(StandardOperationsTests PROPERTIES FOLDER "FatedQuest.Libraries")
-set_target_properties(StandardObjectsTests PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(GamePackage PROPERTIES FOLDER "FatedQuest.Libraries")
-set_target_properties(GamePackageTests PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(BinaryOperations PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(XmlDocument PROPERTIES FOLDER "FatedQuest.Libraries")
-set_target_properties(XmlDocumentTests PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(Logger PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(Observer PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(ClassTypes PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(StoredDocument PROPERTIES FOLDER "FatedQuest.Libraries")
 set_target_properties(SharedEnums PROPERTIES FOLDER "FatedQuest.Libraries")
+
+if(ENABLE_TESTS)
+    add_subdirectory(EngineTests)
+    add_subdirectory(ToolsTests)
+    add_subdirectory(InputTests)
+
+    add_subdirectory(../FatedQuest.Libraries/StandardOperationsTests StandardOperationsTests)
+    add_subdirectory(../../../FatedQuest.Libraries/XmlDocumentTests XmlDocumentTests)
+    add_subdirectory(../FatedQuest.Libraries/StandardObjectsTests StandardObjectsTests)
+    add_subdirectory(../FatedQuest.Libraries/GamePackageTests GamePackageTests)
+
+    set_target_properties(XmlDocumentTests PROPERTIES FOLDER "FatedQuest.Libraries")
+    set_target_properties(StandardOperationsTests PROPERTIES FOLDER "FatedQuest.Libraries")
+    set_target_properties(StandardObjectsTests PROPERTIES FOLDER "FatedQuest.Libraries")
+    set_target_properties(GamePackageTests PROPERTIES FOLDER "FatedQuest.Libraries")
+
+    set_target_properties(gmock PROPERTIES FOLDER "External")
+    set_target_properties(gmock_main PROPERTIES FOLDER "External")
+    set_target_properties(gtest PROPERTIES FOLDER "External")
+    set_target_properties(gtest_main PROPERTIES FOLDER "External")
+endif()
