--- a/FatedQuest.Libraries/StandardOperations/CMakeLists.txt
+++ b/FatedQuest.Libraries/StandardOperations/CMakeLists.txt
@@ -66,6 +66,6 @@ endforeach()
 add_subdirectory(../Logger Logger)
 
 # Link dependencies
-target_link_libraries(StandardOperations
+target_link_libraries(StandardOperations PUBLIC
     Logger
 )
