You can now launch Tools_Debug

--- a/FatedQuest.Libraries/GamePackage/CMakeLists.txt
+++ b/FatedQuest.Libraries/GamePackage/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Define build configurations
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug" CACHE STRING "Available build types" FORCE)
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:Debug>DLL")
 
 # Collect source files
 file(GLOB_RECURSE UNFILTERED_SOURCE_FILES "*.cpp")
@@ -62,6 +63,10 @@ foreach(OUTPUTCONFIG Debug Release Tools_Debug)
     )
 endforeach()
 
+# Get Packages
+NugetInclude("zlib" GamePackage)
+NugetInclude("rapidxml" GamePackage)
+
 # Link libraries
 add_subdirectory(../Logger Logger)
 add_subdirectory(../StandardOperations StandardOperations)
@@ -73,7 +78,3 @@ target_link_libraries(GamePackage PUBLIC
     StandardOperations
     BinaryOperations
 )
-
-# Get Packages
-NugetInclude("zlib" GamePackage)
-NugetInclude("rapidxml" GamePackage)
