--- a/FatedQuest.Libraries/BinaryOperations/CMakeLists.txt
+++ b/FatedQuest.Libraries/BinaryOperations/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Define build configurations
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Tools_Debug" CACHE STRING "Available build types" FORCE)
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<OR:$<CONFIG:Debug>,$<CONFIG:Tools_Debug>>:Debug>DLL")
 
 # Collect source files
 file(GLOB_RECURSE UNFILTERED_SOURCE_FILES "BinaryZip/*.cpp")
